--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,18 @@
 
+/* 去掉ul列表前的小圆点 */
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+/* 修改链接颜色 */
+ul li a {
+    color: grey; /* 设置链接颜色为灰色 */
+    text-decoration: none; /* 去掉下划线 */
+}
+
+/* 鼠标悬停时链接颜色变化 */
+ul li a:hover {
+    color: darkgrey;
+}
