--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>我的网站</title>
+    <!-- 链接到CSS文件 -->
+    <link rel="stylesheet" href="/path/to/your/css/style.css">
+</head>
+<body>
+    <header>
+        <h1>网站标题</h1>
+    </header>
+    <main>
+        {{ content }}  <!-- 这里是Markdown文件或其他页面内容被插入的地方 -->
+    </main>
+    <footer>
+        <p>版权信息</p>
+    </footer>
+</body>
+</html>
