--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,14 @@ body {
     font-family: 'Noto Sans SC', sans-serif;
 }
 
-header img {
-    width: 100%; /* 图片宽度占满整个header */
-    height: auto; /* 高度自动调整以保持图片比例 */
+header {
+    width: 100%; /* 让header占据整个容器的宽度 */
+    height: 150px; /* 设置一个固定高度 */
+    background-image: url('img/huangshan.jpeg'); /* 设置背景图片 */
+    background-size: cover; /* 确保图片覆盖整个header区域 */
+    background-position: center; /* 图片居中显示 */
 }
+
 
 /* 去掉ul列表前的小圆点 */
 ul {
