--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,10 @@ body {
 }
 
 header {
-    width: 100%; /* 让header占据整个容器的宽度 */
-    height: 150px; /* 设置一个固定高度 */
-    background-image: url('img/huangshan.jpeg'); /* 设置背景图片 */
-    background-size: cover; /* 确保图片覆盖整个header区域 */
-    background-position: center; /* 图片居中显示 */
+    width: 100%; /* 宽度占满整个屏幕 */
+    height: 20vh; /* 高度为视口高度的20% */
+    background-color: transparent; /* 背景透明 */
 }
-
 
 /* 去掉ul列表前的小圆点 */
 ul {
