--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,18 @@
 body {
     font-family: 'Noto Sans SC', sans-serif;
+    font-size: 16px; /* 默认字体大小 */
+}
+
+@media (min-width: 768px) {
+    body {
+        font-size: 1vw; /* 在较大的屏幕上，根据视口宽度调整字体大小 */
+    }
+}
+
+@media (min-width: 1200px) {
+    body {
+        font-size: 18px; /* 在非常大的屏幕上设置一个最大字体大小 */
+    }
 }
 
 header {
