--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ header {
 h1 {
     font-family: 'Noto Sans SC', sans-serif; /* 继承之前设置的字体 */
     font-size: clamp(24px, 2.5vw, 36px); /* 自适应字体大小 */
-    margin-left: 4vw; /* 如果需要，也可以为标题设置左边距 */
+/*     margin-left: 4vw; /* 如果需要，也可以为标题设置左边距 */ */
 }
 
 /* 去掉ul列表前的小圆点 */
