--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,13 @@
 </head>
 <body>
     <header>
+    <ul>
+      {% for post in site.posts %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+      {% endfor %}
+    </ul>
     </header>
     <footer>
     </footer>
