--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Noto Sans SC', sans-serif; /* 字体族设置为Noto Sans SC，备用字体为sans-serif */
     /* 最小值：18px, 理想值：2vw, 最大值：30px */
-    font-size: clamp(18px, 2vw, 30px); /* 字体大小根据视口宽度动态调整，但不小于18px且不大于30px */
+    font-size: clamp(3rem, 2.5vw, 5rem); /* 字体大小根据视口宽度动态调整，但不小于18px且不大于30px */
     margin-left: 4vw; /* 页面左边距设置为视口宽度的4%，以提供动态调整的空白区域 */
 }
 
