--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -11,6 +11,7 @@
     <header>
     </header>
     <h1>{{ page.title }}</h1>
+    <a href="/" class="back-to-home">返回主页</a>
     <p>
          {{ content }}  <!-- 这里是Markdown文件或其他页面内容被插入的地方 -->
     </p>
