--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ header {
 }
 
 h1 {
-    font-family: 'Noto Serif', serif;
+    font-family: 'Noto Serif', sans-serif;
     font-size: 2rem; /* 示例：设置标题的字体大小 */
     font-weight: bold; /* 加粗 */
 }
