--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,11 @@ p {
     padding-left: 20px; /* 自定义标题和日期之间的距离 */
 }
 
+.spacer {
+    flex-grow: 1; /* 使得这个空白填充占据所有可用空间 */
+    margin-left: 20px; /* 或您希望的任何间距，这确保了标题和日期之间的最小间距 */
+}
+
 /* 可选：为链接添加一些样式，比如悬停效果 */
 .post-link:hover {
     color: #000; /* 鼠标悬停时的颜色变化 */
