--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,10 +38,9 @@ p {
 }
 
 .post-link {
-    display: flex; /* 启用flexbox布局 */
-    justify-content: space-between; /* 在主轴上使用空间均匀分布，但因为日期使用了margin-left:auto，这将导致日期靠右对齐 */
-    width: 100%; /* 根据需要调整链接的宽度 */
-    text-decoration: none; /* 去除下划线 */
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
 
 .post-title, {
@@ -49,8 +48,6 @@ p {
 }
 
 .post-date {
-    margin-left: auto; /* 自动外边距推动日期向右对齐 */
-    padding-left: 20px; /* 自定义标题和日期之间的距离 */
 }
 
 .spacer {
