--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ p {
     justify-content: space-between; /* 这会在标题和日期之间添加空间，但不会推到最右边 */
     align-items: center;
     width: 80%; /* 或者根据您的页面设计调整宽度 */
-    margin: 0 auto; /* 这会使得容器居中显示 */
+    margin-left: 4vw; /* 这会使得容器居中显示 */
     padding: 0 10px; /* 根据需要调整内边距 */
     box-sizing: border-box; /* 保证内边距不会影响容器的最终宽度 */
 }
