--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,9 +74,18 @@ p {
 }
 
 table th:first-of-type {
-    width: 20%;
+    width: 25%;
 }
 
+table th:nth-of-type(2) {
+    width: 30%;
+}
+table th:nth-of-type(3) {
+    width: 30%;
+}
+table th:nth-of-type(4) {
+    width: 50%;
+}
 
 /* 去掉ul列表前的小圆点 */
 ul {
